fix(FEC-12539): Shaka text displayer font size too small on TVs

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -35,9 +35,3 @@
 :-ms-fullscreen .shaka-text-container {
   font-size: 4.4vmin;
 }
-
-@media screen and (min-width: 1240px) {
-  .shaka-text-container {
-    font-size: 4.4vmin;
-  }
-}
